different flow for admin and user added.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Parking Lot - Login</title>
+    <title>Parking Lot Login</title>
 </head>
 <body>
-<h1>Welcome to Parking Lot System</h1>
-<a href="/oauth2/authorization/google">Login with Google</a>
+<h2>Welcome to Parking Lot System</h2>
+<a href="/oauth2/authorization/google-user">Login as User</a><br><br>
+<a href="/oauth2/authorization/google-admin">Login as Admin</a>
 </body>
 </html>
